@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.439 2005/10/25 21:33:22 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.440 2005/10/25 23:59:48 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
@@ -10,6 +10,8 @@
   added debugging code for the interaction between the 2 threads via Event()
   src/GLIUtility.py:
   doubled the buffer size in spawn()
+  bump buffer size up to 16384
+  only report progress in 5% increments
 
   24 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
